@@ -1,3 +1,7 @@
+2012-11-03  H.J. Lu  <hjl.tools@gmail.com>
+
+	* binutils-secondary-1.patch: Updated.
+
 2012-10-25  H.J. Lu  <hjl.tools@gmail.com>
 
 	* binutils-lto-mixed-18.patch: Check symbol for linker created
